--- a/readme
+++ b/readme
@@ -9,5 +9,5 @@ Running the client:
 1) cd Ex2
 2) In order to change the screen id (The default value is 3), open 'js/main.js' file and change line 6 to the wanted value (var screenId = 3;)
 3) Open Google Chrome (WinKey + R and run the command: 'chrome.exe --user-data-dir="C:/Chrome dev session" --disable-web-security')
-4) In Google Chrome, open the file: 'Ex2/index.html'
+4) In Google Chrome, run the 'index.html' file: 'http://localhost:8080/index.html'
 
